Add permissions section for workflow to enable content write access

--- a/.github/workflows/update-collections.yml
+++ b/.github/workflows/update-collections.yml
@@ -6,6 +6,9 @@ on:
       - "data/*.json"
       - "!data/collections.json"
 
+permissions:
+  contents: write
+
 jobs:
   update-manifest:
     runs-on: ubuntu-latest
